--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -873,12 +873,15 @@ nav div.toolbar {
 }
 
 .navbar .nav > li > span.separator {
-    color: #555555;
+    color: #999999;
     float: none;
     padding: 10px 15px;
     text-decoration: none;
-    text-shadow: 0 1px 0 #FFFFFF;
     cursor: default;
+}
+
+.navbar-inverse .nav > li > span.separator {
+	color: #666666;
 }
 
 .dropdown-menu li > span.separator {
