Fixing leading article in Joomla 2.5

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -1278,4 +1278,7 @@ p.readmore{
 ::-moz-selection {
 	background: rgb(255,255,0);
 }
-
+/*leading Articles*/
+.items-leading [class*="leading-"]{
+	overflow: hidden;
+}
