fixing space page header joomla 3

--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -381,7 +381,7 @@ p.img_caption, .item p.img_caption, .item-page p.img_caption {
 }
 .page-header{
 	padding-bottom:0;
-	margin: 0;
+	margin:20px 0;
 }
 /* @ Search */
 
