Fixing site title in logo type image

--- a/code/wright/css/reset.css
+++ b/code/wright/css/reset.css
@@ -94,7 +94,7 @@ text-indent: -1000em;
 }
 div#logo a.image h2 {
 	text-indent: -1000em;
-	float:left;
+	display: none;
 }
 div#logo a.image h3 {
 	text-indent: -1000em;
