--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -728,3 +728,14 @@ dl.tabs {
 .current dd {
 	padding: 0 10px;
 }
+.btn-toolbar .btn-group {
+	display: inline-block;
+}
+.list-condensed li {
+	padding: 4px 5px;
+}
+.list-striped li, .list-striped dd, .row-striped .row, .row-striped .row-fluid {
+	list-style: none;
+	margin-left: 0;
+	padding: 8px;
+}
