--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -739,3 +739,18 @@ dl.tabs {
 	margin-left: 0;
 	padding: 8px;
 }
+.hide-text {
+	font-size: 0 !important;
+}
+.hide-text::before {
+	font-size: 14px;
+}
+[class^="icon-"], [class*=" icon-"]{
+	font-family: FontAwesome !important;
+}
+.menu [class^="icon-"], .menu [class*=" icon-"]{
+	width: auto;
+}
+.menu [class^="icon-"]::before, .menu [class*=" icon-"]::before{
+	margin-right: 3px;
+}
