--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -26,6 +26,10 @@ a [class^="icon-"], a [class*=" icon-"] {
 .icon-white, .nav > .active > a > [class^="icon-"], .nav > .active > a > [class*=" icon-"], .dropdown-menu > li > a:hover > [class^="icon-"], .dropdown-menu > li > a:hover > [class*=" icon-"], .dropdown-menu > .active > a > [class^="icon-"], .dropdown-menu > .active > a > [class*=" icon-"] {
 	background-image: none;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    line-height: normal;
+}
 /* @group HTML */
 
 a.joomlashack {
@@ -349,11 +353,31 @@ p.img_caption, .item p.img_caption, .item-page p.img_caption {
 }
 
 /* @ Tabs */
-.nav-tabs .tabs a, .nav-pills .tabs a {
-	line-height: 14px;
-	margin-right: 2px;
-	padding-left: 12px;
-	padding-right: 12px;
+.nav-tabs > .open h3 a {
+	background-color: #FFFFFF;
+    border-color: #DDDDDD #DDDDDD transparent;
+    border-style: solid;
+    border-width: 1px;
+    color: #555555 !important;
+    cursor: default;	
+}
+.nav-tabs h3 a{
+	padding:4px 5px 1px;
+	vertical-align: bottom;
+}
+.bs-docs-sidenav li {
+	margin-bottom: 0;
+}
+.nav-tabs dt a{
+	font-size: .7em;
+	border-radius:5px 5px 0 0; 
+}
+.tabs.nav.nav-tabs dt.tabs {
+	float: left;
+}
+dl.tabs.nav h3 {
+    margin-bottom: 0;
+    margin-right: 5px;
 }
 .newsflash-title_ms1, .newsflash-title_ms2, .newsflash-title_ms3, .newsflash-title_ms4, .newsflash-title {
 	margin-top: 10px;
