--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -659,7 +659,7 @@ ul.menu ul{
 .hide-text::before {
 	font-size: 14px;
 }
-[class^="icon-"], [class*=" icon-"]{
+[class^="icon-"]::before, [class*=" icon-"]::before{
 	font-family: FontAwesome !important;
 }
 .menu [class^="icon-"], .menu [class*=" icon-"]{
