--- a/sources/less/joomla30.less
+++ b/sources/less/joomla30.less
@@ -42,7 +42,7 @@ a.joomlashack {
 	text-align: center;
 	text-indent: -1000em;
 	width: 75px;
-	background: url("../images/jscright.png") no-repeat scroll 0 0 transparent;
+	background: url("../wright/images/jscright.png") no-repeat scroll 0 0 transparent;
 }
 aside a.readmore{
 	margin-bottom: 10px;
