Fixing space item menu with icon
For new Version of FontAwesome

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -879,6 +879,7 @@ nav div.toolbar {
     height: 100%;
     line-height: 100%;
     vertical-align: baseline;
+    margin-left: 5px;
 }
 
 .nav > li > span.separator {
