--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -316,6 +316,7 @@ p.img_caption {
 	height: 100%;
 	line-height: 100%;
 	vertical-align: baseline;
+	margin-left: 5px;
 }
 .navbar .nav li {
 	margin-bottom: 0;
