Fixing space caret icon of item dropdown-toggle

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -879,9 +879,10 @@ nav div.toolbar {
     height: 100%;
     line-height: 100%;
     vertical-align: baseline;
-    margin-left: 5px;
 }
-
+.navbar a.dropdown-toggle .icon-caret-right{
+	margin-left: 5px;
+}
 .nav > li > span.separator {
     display: block;
     cursor: default;
