--- a/code/wright/parameters/assets/basicbootstrap.css
+++ b/code/wright/parameters/assets/basicbootstrap.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family:'FontAwesome';
+  src:url('../../fontawesome/font/fontawesome-webfont.eot');
+  src:url('../../fontawesome/font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../../fontawesome/font/fontawesome-webfont.woff') format('woff'),
+    url('../../fontawesome/font/fontawesome-webfont.ttf') format('truetype');
+  font-weight:normal;
+  font-style:normal
+}
+
 .row-fluid:after {
     clear: both;
 }
@@ -74,11 +84,45 @@
     width: 6.38298%;
 }
 
-div.col [class^="icon-"]:before, [class*=" icon-"]:before {
-	font-family: FontAwesome;
+.icon-caret-left:before{
+    content:"\f0d9";
 }
 
+.icon-caret-right:before{
+    content:"\f0da";
+}
 
-a [class^="icon-"], a [class*=" icon-"] {
-	cursor: pointer;
+.icon-caret-left:before, .icon-caret-left:before,
+.icon-caret-right:before, .icon-caret-right:before {
+    display: inline-block;
+    text-decoration: inherit;
+}
+
+li .icon-caret-left, li .icon-caret-left,
+li .icon-caret-right, li .icon-caret-right {
+    display: inline-block;
+    text-align: center;
+    width: 1.25em;
+}
+
+a .icon-caret-left, a .icon-caret-left,
+a .icon-caret-right, a .icon-caret-right {
+    display: inline-block;
+    cursor: pointer;
+}
+
+.icon-caret-left, .icon-caret-left,
+.icon-caret-right, .icon-caret-right {
+    background-image: none !important;
+    background-position: 0 0;
+    background-repeat: repeat;
+    display: inline;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    height: auto;
+    line-height: normal;
+    text-decoration: inherit;
+    vertical-align: baseline;
+    width: auto;
 }
