--- a/code/wright/parameters/assets/basicbootstrap.css
+++ b/code/wright/parameters/assets/basicbootstrap.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family:'FontAwesome';
+  src:url('../../fontawesome/font/fontawesome-webfont.eot');
+  src:url('../../fontawesome/font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../../fontawesome/font/fontawesome-webfont.woff') format('woff'),
+    url('../../fontawesome/font/fontawesome-webfont.ttf') format('truetype');
+  font-weight:normal;
+  font-style:normal
+}
+
 .row-fluid:after {
     clear: both;
 }
@@ -41,44 +51,77 @@
     width: 100%;
 }
 .row-fluid .span11 {
-    width: 91.4894%;
+    width: 91.453%;
 }
 .row-fluid .span10 {
-    width: 82.9787%;
+    width: 82.906%;
 }
 .row-fluid .span9 {
-    width: 74.4681%;
+    width: 74.359%;
 }
 .row-fluid .span8 {
-    width: 65.9574%;
+    width: 65.812%;
 }
 .row-fluid .span7 {
-    width: 57.4468%;
+    width: 57.265%;
 }
 .row-fluid .span6 {
-    width: 48.9362%;
+    width: 48.7179%;
 }
 .row-fluid .span5 {
-    width: 40.4255%;
+    width: 40.1709%;
 }
 .row-fluid .span4 {
-    width: 31.9149%;
+    width: 31.6239%;
 }
 .row-fluid .span3 {
-    width: 23.4043%;
+    width: 23.0769%;
 }
 .row-fluid .span2 {
-    width: 14.8936%;
+    width: 14.5299%;
 }
 .row-fluid .span1 {
-    width: 6.38298%;
+    width: 5.98291%;
+}
+.icon-arrow-left:before{
+    content:"\f0d9";
 }
 
-div.col [class^="icon-"]:before, [class*=" icon-"]:before {
-	font-family: FontAwesome;
+.icon-arrow-right:before{
+    content:"\f0da";
 }
 
+.icon-arrow-left:before, .icon-arrow-left:before,
+.icon-arrow-right:before, .icon-arrow-right:before {
+    display: inline-block;
+    text-decoration: inherit;
+}
 
-a [class^="icon-"], a [class*=" icon-"] {
-	cursor: pointer;
+li .icon-arrow-left, li .icon-arrow-left,
+li .icon-arrow-right, li .icon-arrow-right {
+    display: inline-block;
+    text-align: center;
+    width: 1.25em;
+}
+
+a .icon-arrow-left, a .icon-arrow-left,
+a .icon-arrow-right, a .icon-arrow-right {
+    display: inline-block;
+    cursor: pointer;
+}
+
+.icon-arrow-left, .icon-arrow-left,
+.icon-arrow-right, .icon-arrow-right {
+    background-image: none !important;
+    background-position: 0 0;
+    background-repeat: repeat;
+    display: inline;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    height: auto;
+    line-height: normal;
+    text-decoration: inherit;
+    vertical-align: baseline;
+    width: auto;
 }
