Hide cog from Wright v.2 sites

--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -746,3 +746,7 @@ dl.tabs {
 .menu [class^="icon-"]::before, .menu [class*=" icon-"]::before{
 	margin-right: 3px;
 }
+
+a.btn.dropdown-toggle span.icon-cog {
+	display: none;
+}
