Added JS action for email/print buttons

--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -588,10 +588,6 @@ ul.dropdown-menu li {
 	margin-left: 10px;
 }
 
-div.btn-group i.icon-cog {
-	display: none;
-}
-
 ul.dropdown-menu li a {
 	text-decoration: none;
 }
@@ -746,7 +742,30 @@ dl.tabs {
 .menu [class^="icon-"]::before, .menu [class*=" icon-"]::before{
 	margin-right: 3px;
 }
-
-a.btn.dropdown-toggle span.icon-cog {
+.btn-group {
+	position: relative;
+}
+.btn-group .dropdown-menu {
 	display: none;
+	position: absolute;
+	left: -70px;
+	top: 100%;
+	z-index: 999;
+	list-style: none;
+	background-color: #fff;
+	padding: 3px;
+	min-width: 70px;
+	border: #333 1px solid;
+	text-align: right;
+}
+.btn-group .dropdown-menu li {
+	float: none;
+	text-align: right;
+}
+div.tags a.label {
+	text-decoration: none;
+	border: 1px solid #0088CC;
+	border-radius: 5px;
+	padding: 2px;
+	font-size: 0.8em;
 }
