--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -893,3 +893,144 @@ iframe{
 .tag-category .thumbnails li h3{
 	margin-bottom: 0;
 }
+
+/*
+// Tooltips
+// --------------------------------------------------
+*/
+
+.tooltip {
+  position: absolute;
+  z-index: 1030;
+  display: block;
+  visibility: visible;
+  font-size: 11px;
+  line-height: 1.4;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
+.tooltip.in {
+  opacity: 0.8;
+  filter: alpha(opacity=80);
+}
+
+.tooltip.top {
+	margin-top:  -3px;
+	padding: 5px 0;
+}
+
+.tooltip.right {
+	margin-left:  3px;
+	padding: 0 5px;
+}
+
+.tooltip.bottom {
+	margin-top:   3px;
+	padding: 5px 0;
+}
+
+.tooltip.left {
+	margin-left: -3px;
+	padding: 0 5px;
+}
+
+
+.tooltip-inner {
+  max-width: 200px;
+  padding: 8px;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  background-color: #000000;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+.tooltip-arrow {
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+}
+.tooltip.top .tooltip-arrow {
+    bottom: 0;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px 5px 0;
+    border-top-color: #000000;
+}
+.tooltip.right .tooltip-arrow {
+    top: 50%;
+    left: 0;
+    margin-top: -5px;
+    border-width: 5px 5px 5px 0;
+    border-right-color: #000000;
+}
+.tooltip.left .tooltip-arrow {
+    top: 50%;
+    right: 0;
+    margin-top: -5px;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #000000;
+}
+.tooltip.bottom .tooltip-arrow {
+    top: 0;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 0 5px 5px;
+    border-bottom-color: #000000;
+}
+
+/*-------------------------------*/
+
+.nav-tabs {
+    border-bottom: 1px solid #DDDDDD;
+}
+.nav-tabs:before, .nav-tabs:after {
+    content: " ";
+    display: table;
+}
+.nav-tabs:after {
+    clear: both;
+}
+
+.nav-tabs > li {
+    float: left;
+    margin-bottom: -1px;
+    margin-left: 0;
+}
+.nav-tabs > li > a {
+    border-radius: 4px 4px 0 0;
+    border: 1px solid rgba(0, 0, 0, 0);
+    display: block;
+    line-height: 1.42857;
+    margin-right: 2px;
+    padding: 10px 15px;
+    position: relative;
+    text-decoration: none;
+}
+.nav-tabs > li > a:hover {
+    border-color: #EEEEEE #EEEEEE #DDDDDD;
+    background-color: #EEEEEE;
+}
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    background-color: #FFFFFF;
+    border-color: #DDDDDD #DDDDDD rgba(0, 0, 0, 0);
+    border-image: none;
+    border-style: solid;
+    border-width: 1px;
+    color: #555555;
+    cursor: default;
+}
+
+dl> dd + dt
+{
+	margin-bottom: -1px;
+}
