--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -621,11 +621,11 @@ div#pathway span.sep img {
 /* Text selection */
 
 ::selection {
-	background:rgb(255,255,0);
+	background:#D2EAF6;
 }
 
 ::-moz-selection {
-	background: rgb(255,255,0);
+	background: #D2EAF6;
 }
 /** module menu in sidebar */
 ul.menu {
