--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -332,6 +332,9 @@ body.dark div.panel {
 	display: none;
 	visibility: hidden;
 }
+.filters {
+	padding: 0;
+}
 .filter-search {
 	float: left;
 }
@@ -605,8 +608,35 @@ ul.menu ul{
 	width: 100%;
 	height: auto;
 }
+.items-more{
+	padding:0;
+	margin: 0;
+}
 .items-more ul{
 	margin:0;
+}
+.items-more h3{
+	color:#FFF;
+	border:1px solid #00799F;
+	background:#0099CC;
+}
+.items-more ol{
+	border-left:1px solid #CCC;
+	border-right:1px solid #CCC;
+}
+.items-more li{
+	border-bottom:1px solid #CCC;
+	background:url(../../images/arrow.png) no-repeat 0 5px;
+}
+.items-more li:hover{
+	background:#EEE url(../../images/arrow.png) no-repeat 0 5px;
+}
+.items-more ol{
+	border: 1px solid #ccc;
+}
+.items-more li{
+	margin:0;
+	padding:5px 10px 5px 25px;
 }
 .newsflash-title_ms1,
 .newsflash-title_ms2,
@@ -633,4 +663,18 @@ ul.menu ul{
 
 .open > .dropdown-menu {
 	display: block;
+}
+
+.search *,
+.search .inputbox{
+	margin-bottom: 5px;
+	margin-left: 5px;
+}
+}
+.search .inputbox,
+.search *:first-child{
+	margin-left: 0;
+}
+.finder input[type="text"]:first-child{
+	margin-bottom: 5px;
 }
