--- a/code/wright/css/joomla30.css
+++ b/code/wright/css/joomla30.css
@@ -639,6 +639,7 @@ ul.menu ul{
     list-style:none;
     margin:5px;
 }
+
 .items-more{
 	padding:0;
 	margin: 0;
@@ -646,8 +647,25 @@ ul.menu ul{
 .items-more ul{
 	margin:0;
 }
-.items-more .items-more{
-	border:0 none;
+.items-more h3{
+	color:#FFF;
+	border:1px solid #00799F;
+	background:#0099CC;
+}
+.items-more ol{
+	border-left:1px solid #CCC;
+	border-right:1px solid #CCC;
+}
+.items-more li{
+	padding: 0 5px 0 5px;
+	border-bottom:1px solid #CCC;
+	background:url(../../images/arrow.png) no-repeat 0 9px;
+}
+.items-more li:hover{
+	background:#EEE url(../../images/arrow.png) no-repeat 0 9px;
+}
+.items-more .nav-tabs li a:hover{
+	background-color: transparent;
 }
 .random-image > img{
 	width: 100%;
