adding max width to img j25

--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -407,7 +407,9 @@ span.star {
 
 /* Images and links */
 
-
+img{
+	max-width: 100%;
+}
 .img-intro-left,
 .img-fulltext-left,
 .pull-left.item-image {
