adding varibles to arrow of dropdown-submenu

--- a/code/less/variables-generic.less
+++ b/code/less/variables-generic.less
@@ -3,6 +3,14 @@
 // --------------------------------------------------
 
 
+// Options dropdown-submenu , this is a element parent with arrow for submenu
+// You can use true/false for show arrow
+@dropdownSubmenuLinkArrow : true;
+@dropdownSubmenuLinkArrowColor : @dropdownLinkColor;
+@dropdownSubmenuLinkArrowColorHover : @dropdownLinkColorHover;
+@dropdownSubmenuLinkArrowColorActive : @dropdownLinkColorActive;
+
+
 // Global values
 // --------------------------------------------------
 
