--- a/code/less/variables-generic.less
+++ b/code/less/variables-generic.less
@@ -5,10 +5,21 @@
 
 // Options dropdown-submenu , this is a element parent with arrow for submenu
 // You can use true/false for show arrow
+// -------------------------
 @dropdownSubmenuLinkArrow : true;
 @navbarInverseDropdownSubmenuLinkArrow : true;
 
+
+// Gradient options of dropdown links
+// You can use true/false for add gradient
+// -------------------------
+
+@dropdownLinkGradient : true;
+@navbarInverseDropdownLinkGradient : true;
+
+
 // Dropdown For navbar-inverse
+// -------------------------
 @navbarInverseDropdownBackground : @dropdownBackground;
 @navbarInverseDropdownBorderFallback : #ccc;
 @navbarInverseDropdownBorder : @dropdownBorder;
@@ -17,6 +28,7 @@
 @navbarInverseDropdownLinkColorActive : @dropdownLinkColorActive;
 @navbarInverseDropdownLinkBackgroundHover : @dropdownLinkBackgroundHover;
 @navbarInverseDropdownLinkBackgroundActive : @dropdownLinkBackgroundActive;
+
 
 // Global values
 // --------------------------------------------------
