adding space to btn groups and set dropdown varriable

--- a/code/less/variables-generic.less
+++ b/code/less/variables-generic.less
@@ -14,8 +14,8 @@
 // You can use true/false for add gradient
 // -------------------------
 
-@dropdownLinkGradient : true;
-@navbarInverseDropdownLinkGradient : true;
+@dropdownLinkGradient : false;
+@navbarInverseDropdownLinkGradient : false;
 
 
 // Dropdown For navbar-inverse
