adding option for add/rm navbar gradient

--- a/code/less/variables-generic.less
+++ b/code/less/variables-generic.less
@@ -17,6 +17,9 @@
 @dropdownLinkGradient : false;
 @navbarInverseDropdownLinkGradient : false;
 
+@navbarInnerGradient : false;
+@navbarInverseInnerGradient : false;
+
 
 // Dropdown For navbar-inverse
 // -------------------------
