adding option for btn gradient

--- a/code/less/variables-generic.less
+++ b/code/less/variables-generic.less
@@ -20,6 +20,8 @@
 @navbarInnerGradient : false;
 @navbarInverseInnerGradient : false;
 
+@buttonGradient: false;
+
 
 // Dropdown For navbar-inverse
 // -------------------------
