Fix single contact information display
Close #368

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -1,4 +1,3 @@
-
 dl.article-info {
 	dd,
 	dd > div {
@@ -29,5 +28,30 @@ dl.article-info {
 
 	.moduletable, .module {
 		.m-0;
+	}
+}
+
+.contact {
+
+	.thumbnail {
+		background: @white;
+	}
+
+	.dl-horizontal {
+
+		&.contact-position dd {
+			margin-left: 0;
+			font-size: 1.5em;
+		}
+
+		dt {
+			text-align: center;
+			width: 31px;
+		}
+
+		dd {
+			margin-left: 40px;
+			margin-bottom: 2px;
+		}
 	}
 }
